Bug fixes (#1161)
* MM-10334 - Copy link menu hidden on desktop app

* MM-10336 - IE11 favourite icon too small

* MM-10409 - Mentions badge cutoff in teams sidebar

* MM-10428 - Adjusting system notice in console

* Updating shadow

--- a/sass/components/_system-notice.scss
+++ b/sass/components/_system-notice.scss
@@ -1,9 +1,10 @@
 @charset 'UTF-8';
 
 .system-notice {
+    @include box-shadow(0 20px 30px alpha-color($black, .07), 0 14px 20px alpha-color($black, .07));
     @include border-radius(4px);
     background-color: $white;
-    border: 1px solid alpha-color($black, .1);
+    border: 1px solid alpha-color($black, .15);
     bottom: 12px;
     padding: 18px 20px 0;
     position: absolute;
@@ -21,6 +22,7 @@
     height: 36px;
 
     svg {
+        fill: rgb(22, 109, 224);
         height: 36px;
         width: 36px;
     }
@@ -51,6 +53,11 @@
         flex: 1;
         overflow: hidden;
         text-overflow: ellipsis;
+
+        &:hover {
+            background: rgb(22, 109, 224);
+            color: $white;
+        }
 
         &:first-child {
             @include border-radius(0 0 0 4px);
